<resources>
    <string name="app_name">MyVetPath</string>
    <string name="create_account">Create Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Information</string>
    <string name="action_submission">Create Submission</string>
    <string name="action_viewsubs">View Submissions</string>
    <string name="action_viewdrafts">View Drafts</string>
    <string name="title_activity_create_sub">CreateSubActivity</string>
    <string name="title_activity_view_drafts">ViewDraftsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_add_pictures">AddPicturesActivity</string>
    <string name="action_addpictures">Add Pictures</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="action_instructions">Instructions</string>

    <string name="title_activity_view_subs">ViewSubsActivity</string>
    <string name="subs">Submissions</string>


    <string name="create_error">Required* fields are empty</string>
    <string name="title_activity_sub_details">SubDetailsActivity</string>
    <string name="deleted_message">Deleted </string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_delete_confirmation_prompt_first_part">Are you sure you want to delete \"</string>
    <string name="action_delete_confirmation_second_part">\"?</string>
    <string name="action_delete_confirmation">Delete Confirmation</string>
    <string name="action_home">Home</string>
    <string name="title_et">Title</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="save_draft">Save Draft</string>
    <string name="no_subs">No Submissions</string>
    <string name="action_submit_conformation">Are you sure you are ready to submit?</string>
    <string name="web_URL">https://myvetpath.com/register.html</string>
    <string name="pending">Pending</string>
    <string name="add_samples">Add Samples</string>
    <string-array name="sexString">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_add_samples">AddSamplesActivity</string>
    <string name="species_display">Species: </string>
    <string name="euthanized_neg">Not Euthanized</string>
    <string name="euthanized_pos">Euthanized</string>
    <string name="registering_a_new_user">Registering a New User</string>
    <string name="registeringNewUserSubText">Registering a new user can only be done on the website. Click on the \'Create Account\' button in the home screen in order to be taken to that page.</string>
    <string name="creating_a_submission">Creating a Submission</string>
    <string name="creating_a_submission_subtext">You can get to this screen by clicking on the \'Create Submission\' button in the homescreen. The fields that are required are marked with an asterisk. It is also possible to attach pictures and sample data by clicking on the corresponding buttons in the \'Create Submission Screen\'</string>
    <string name="sending_a_submission">Sending a Submission</string>
    <string name="sending_a_submission_subtext">Submissions will be automatically sent to the server after they\'re submitted as long as there is a stable internet connection. If a submission wasn\'t sent to the server because there wasn\'t an internet connection, then you will have to try to manually resend it.</string>
    <string name="submissions">Submissions</string>
    <string name="submissions_subtext">Submissions are what is being sent to the pathologists in the laboratory. Please include all relevant information in submission. All mandatory fields are marked with an asterisk. Pictures and sample information are optional but are encouraged. All fields in the sample submission need to be filled out if you want to add a sample. Pictures can be added by either uploading a picture from your phone\'s gallery or by taking a picture within the app (which will not be stored in the gallery).</string>
    <string name="ovdl_contact_info">OVDL Contact Info</string>
    <string name="OVDL_contact_info_subtext">The OVDL can be contacted by email at \'vetmed@oregonstate.edu\' or by phone at \'541-737-2141\'.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="username_key">logged_in_username</string>
    <string name="username_preference_key">Username_key</string>
    <string name="report_check">Review this submission</string>
    <string name="report_review_hint">Review</string>
    <string name="report_close">Close submission: </string>
    <string name="MVP_Base_API_URL">208.113.134.137:8000/v1</string>
    <string name="sync">Sync</string>

</resources>
