<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myvetpath.myvetpath.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/createAccountButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccount"
        android:drawableTop="@drawable/ic_person_add_24dp"
        android:padding="@dimen/button_padding"
        android:text="@string/create_account"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createSubButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorSubmission"
        android:drawableTop="@drawable/ic_add_circle_outline_24dp"
        android:padding="@dimen/button_padding"
        android:text="@string/action_submission"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton" />

    <Button
        android:id="@+id/viewSubsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorViewsubs"
        android:drawableTop="@drawable/ic_folder_24dp"
        android:padding="@dimen/button_padding"
        android:text="@string/action_viewsubs"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createSubButton" />

    <Button
        android:id="@+id/viewDraftsButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorDrafts"
        android:drawableTop="@drawable/ic_folder_open_24dp"
        android:padding="@dimen/button_padding"
        android:text="@string/action_viewdrafts"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSubsButton" />

</android.support.constraint.ConstraintLayout>
